--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@samhammer/ckeditor5-simple-image-upload-plugin",
-  "version": "1.0.2",
+  "version": "2.0.0",
   "main": "src/simple-upload-image-plugin.js",
   "repository": {
     "type": "git",
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/SamhammerAG/ckeditor5-simple-image-upload-plugin#readme",
   "dependencies": {
-    "@ckeditor/ckeditor5-core": "^11.0.0",
-    "@ckeditor/ckeditor5-upload": "^10.0.2"
+    "@ckeditor/ckeditor5-core": "~12.0.0",
+    "@ckeditor/ckeditor5-upload": "~11.0.0"
   }
 }
